2008-12-02  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/ObjectValue.cs:
	* Mono.Debugging.Client/ObjectValueFlags.cs: Added new kind of value:
	not supported.

	* Makefile.am: Fix to better support parallel building.

2008-10-22  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/ThreadInfo.cs: Added null check.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.mdp: Updated.

2008-09-03  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/DebuggerFeatures.cs,
	  Mono.Debugging.Client/DebuggerSession.cs,
	  Mono.Debugging.Client/TargetEventArgs.cs, Mono.Debugging.mdp,
	  Makefile.am: When firing the TargetEvent for an Exception, provide
	  the exception object. Added property for getting the debugger
	  capabilities.

2008-08-22  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.addin.xml, Mono.Debugging.mdp,
	  Mono.Debugging.Backend/DebuggerExtensionNode.cs, Makefile.am:
	  Remove Mono.Addins dependency.

2008-08-07  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/BreakpointStore.cs: Fire the change event when
	  a breakpoint is modified.
	* Mono.Debugging.Client/DebuggerSession.cs: Made GetBreakpointHandle
	  protected so it can be used by add-ins.

2008-08-06  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/BreakpointStore.cs,
	  Mono.Debugging.Client/BreakEvent.cs,
	  Mono.Debugging.Client/DebuggerSession.cs, Mono.Debugging.mdp: Add
	  support for live updating of breakpoint's hit count.

2008-08-05  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/ThreadInfo.cs,
	  Mono.Debugging.Client/DebuggerSession.cs: Add location field to
	  ThreadInfo. Reset the cached process list when receiving a target
	  event.

2008-07-25  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/StackFrame.cs,
	  Mono.Debugging.Backend/IBacktrace.cs: Added api for getting all
	  locals of a stack frame.
